added redirect url

--- a/instagram-prototype.html
+++ b/instagram-prototype.html
@@ -30,7 +30,7 @@
             
             <div class="panel-body">
                 
-<a href="https://api.instagram.com/oauth/authorize/?client_id=7c89da9d27cd49f9a18e2d6155032011&redirect_uri=REDIRECT-URI&response_type=token" target="_blank">Click here to authenticate with instagram</a>
+<a href="https://api.instagram.com/oauth/authorize/?client_id=7c89da9d27cd49f9a18e2d6155032011&redirect_uri=https://jesseharold.github.io/project-1-friends-restaurant-review/&response_type=token" target="_blank">Click here to authenticate with instagram</a>
 <br><br>
 At this point, we present the user with a login screen and then a confirmation screen where they grant your app’s access to their Instagram data. Note that unlike the explicit flow the response type here is “token”.
 <br><br>
