--- a/instagram-prototype.html
+++ b/instagram-prototype.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>#seefood Privacy Policy</title>
+    <title>#seefood instagram prototype</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <script
   src="https://code.jquery.com/jquery-3.1.1.min.js"
@@ -33,7 +33,7 @@
             </div>
             
             <div class="panel-body">
-                <a href="https://api.instagram.com/oauth/authorize/?client_id=7c89da9d27cd49f9a18e2d6155032011&redirect_uri=https://jesseharold.github.io/project-1-friends-restaurant-review/instagram-prototype.html&response_type=token" target="_blank">Click here to authenticate with instagram</a>
+                <a href="https://api.instagram.com/oauth/authorize/?client_id=7c89da9d27cd49f9a18e2d6155032011&redirect_uri=https://jesseharold.github.io/project-1-friends-restaurant-review/instagram-prototype.html&response_type=token" target="_blank">Click here to log in with instagram</a>
                 <br><br>
             </div>
         </div>
