--- a/instagram-prototype.html
+++ b/instagram-prototype.html
@@ -33,17 +33,52 @@
             </div>
             
             <div class="panel-body">
-                <a href="https://api.instagram.com/oauth/authorize/?client_id=7c89da9d27cd49f9a18e2d6155032011&redirect_uri=https://jesseharold.github.io/project-1-friends-restaurant-review/instagram-prototype.html&response_type=token" target="_blank">Click here to log in with instagram</a>
-                <br><br>
+                <div id="login">
+                    <a href="https://api.instagram.com/oauth/authorize/?client_id=7c89da9d27cd49f9a18e2d6155032011&redirect_uri=https://jesseharold.github.io/project-1-friends-restaurant-review/instagram-prototype.html&response_type=token" target="_blank">Click here to log in with instagram</a>
+                </div>
+                <div id="response">
+                </div>
             </div>
         </div>
         
         <script lang="javascript">
             $("document").ready(function(){
+                var myToken = "";
+                var endpoint = "https://api.instagram.com/v1/tags/nofilter/media/recent?access_token="+myToken;
+
+
+                //check for auth token and store
                 if (location.href.indexOf("#") > 0){
-                    var authToken = location.href.split("#");
-                    console.log("authenticated: " + authToken.pop());
+                    var authTokenString = location.href.split("#");
+                    var authToken = authTokenString.split("=");
+                    if (authToken[0] === "access_token"){
+                        myToken = authToken[1];
+                        $("#login").hide();
+                    } else {
+                        $("#response").text("User did not give the app permission");
+                    }
                 }
+
+            //get images
+            $.ajax({
+                url: endpoint,
+                method: 'GET'
+            })
+            .done(function(response) {
+                if(response.meta.code === 200){
+                    // create current round of images
+                    for (var i = 0; i < response.data.length; i++) {
+                        //var thisImage = giphyApp.createSingleImage(response.data[i]);    
+                        $("#response").append(response.data[i]);
+                    }
+                } else {
+                    console.error("error: "+response.meta.code);
+                }
+            }).fail(function(err){
+                console.error(err);
+            });
+
+
             });
         </script>
 </body>
