--- a/instagram-prototype.html
+++ b/instagram-prototype.html
@@ -61,15 +61,14 @@
             function getImages(token){
                 //get images
                 $.ajax({
-                    url: endpoint + "?access_token=" + token,
+                    url: endpoint + "?access_token=" + token + "&callback=?",
                     method: 'GET'
                 })
                 .done(function(response) {
                     console.log("done!");
                     if(response.meta.code === 200){
                         // create current round of images
-                        for (var i = 0; i < response.data.length; i++) {
-                            //var thisImage = giphyApp.createSingleImage(response.data[i]);    
+                        for (var i = 0; i < response.data.length; i++) {  
                             $("#response").append(response.data[i]);
                         }
                     } else {
