--- a/instagram-prototype.html
+++ b/instagram-prototype.html
@@ -58,7 +58,7 @@
                     }
                 }
 
-
+                getLocation()
             function getLocation(){
                 $.get("http://ipinfo.io", function(response) {
                     console.log("IP: " + response.ip);
