moved get images call

--- a/instagram-prototype.html
+++ b/instagram-prototype.html
@@ -52,9 +52,7 @@
                     var authToken = authTokenString.split("=");
                     if (authToken[0] === "access_token"){
                         $("#login").hide();
-                        var geoLocation = getLocation();
-                        console.log(geoLocation);
-                        //getImages(authToken[1], geoLocation[0].trim(), geoLocation[1].trim());
+                        getLocation();
                     } else {
                         $("#response").text("User did not give the app permission");
                     }
@@ -63,7 +61,9 @@
             function getLocation(){
                 $.get("https://ipinfo.io", function(response) {
                     var location = response.loc;
-                    return location.split(",");
+                    var geoLocation = location.split(",");
+                    console.log(geoLocation);
+                    getImages(authToken[1], geoLocation[0].trim(), geoLocation[1].trim());
                 }, "jsonp");
             }
             function getImages(token, latitude, longitude){
