added response type to endpoint URL

--- a/instagram-prototype.html
+++ b/instagram-prototype.html
@@ -44,7 +44,7 @@
         <script lang="javascript">
             $("document").ready(function(){
                 //var endpoint = "https://api.instagram.com/v1/tags/nofilter/media/recent";
-                var endpoint = "https://api.instagram.com/v1/media/search?client_id=7c89da9d27cd49f9a18e2d6155032011&";  
+                var endpoint = "https://api.instagram.com/v1/media/search?client_id=7c89da9d27cd49f9a18e2d6155032011&response_type=token&";  
 
                 //check for auth token and store
                 if (location.href.indexOf("#") > 0){
