--- a/instagram-prototype.html
+++ b/instagram-prototype.html
@@ -44,7 +44,8 @@
         <script lang="javascript">
             $("document").ready(function(){
                 //var endpoint = "https://api.instagram.com/v1/tags/nofilter/media/recent";
-                var endpoint = "https://api.instagram.com/v1/media/search?client_id=7c89da9d27cd49f9a18e2d6155032011&response_type=token&";  
+                //var endpoint = "https://api.instagram.com/v1/media/search?client_id=7c89da9d27cd49f9a18e2d6155032011&";  
+                var endpoint =  "https://api.instagram.com/v1/users/self/?"
 
                 //check for auth token and store
                 if (location.href.indexOf("#") > 0){
@@ -68,7 +69,8 @@
             function getImages(token, latitude, longitude){
                 //get images
                 $.ajax({
-                    url: endpoint + "lat=" + latitude + "&lng=" + longitude + "?access_token=" + token + "&callback=?",
+                    //url: endpoint + "lat=" + latitude + "&lng=" + longitude + "?access_token=" + token + "&callback=?",
+                    url: endpoint + "access_token=" + token,
                     method: 'GET'
                 })
                 .done(function(response) {
