testing json p dataType

--- a/instagram-prototype.html
+++ b/instagram-prototype.html
@@ -67,11 +67,17 @@
                 }, "jsonp");
             }
             function getImages(token, latitude, longitude){
+
                 //get images
                 $.ajax({
                     //url: endpoint + "lat=" + latitude + "&lng=" + longitude + "?access_token=" + token + "&callback=?",
                     url: endpoint + "access_token=" + token,
-                    method: 'GET'
+                    method: 'GET',
+                    dataType: "jsonp",
+                    success: function(data) {
+                        console.log(data);
+                    }
+                /*
                 })
                 .done(function(response) {
                     console.log("done!");
@@ -85,6 +91,7 @@
                     }
                 }).fail(function(err){
                     console.error("Failed: " + err);
+                */
                 });
             }
 
