--- a/instagram-prototype.html
+++ b/instagram-prototype.html
@@ -76,7 +76,7 @@
                     dataType: "jsonp"
                 })
                 .done(function(response) {
-                    //console.log("done!");
+                    console.log(response.data);
                     if(response.meta.code === 200){
                         // create current round of images
                         for (var i = 0; i < response.data.length; i++) {  
