testing getting own content

--- a/instagram-prototype.html
+++ b/instagram-prototype.html
@@ -44,7 +44,8 @@
         <script lang="javascript">
             $("document").ready(function(){
                 //var endpoint = "https://api.instagram.com/v1/tags/nofilter/media/recent?";
-                var endpoint = "https://api.instagram.com/v1/media/search?";  
+                var endpoint = "https://api.instagram.com/v1/users/self/media/recent?";
+                //var endpoint = "https://api.instagram.com/v1/media/search?";  
                 //var endpoint =  "https://api.instagram.com/v1/users/self/?"
 
                 //check for auth token and store
