updating app name

--- a/instagram-prototype.html
+++ b/instagram-prototype.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>#seefood instagram prototype</title>
+    <title>#thatsmyjam instagram prototype</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <script
   src="https://code.jquery.com/jquery-3.1.1.min.js"
@@ -24,7 +24,7 @@
 <body>
     <div class="container">
         <div class="jumbotron" id="title">
-            <h1>see-food-friends</h1>
+            <h1>#thatsmyjam</h1>
         </div>
 
         <div class="panel panel-default">
