moved some logic to separate functions

--- a/instagram-prototype.html
+++ b/instagram-prototype.html
@@ -42,6 +42,32 @@
         </div>
         
         <script lang="javascript">
+/*
+program flow:
+
+user logs in w instagram
+    look up their IG username in our DB of users, add if new
+    retrieve their friends list from IG
+        add / update in our DB on their user object
+    get their friends' reviews and photos from the DB
+        populate the map w friends reviews
+    check IG to see if there are new photos from their friends
+        update the DB with new reviews
+        update the map
+    check to see if they have new instagram photos with the hashtag
+        add new photos to our DB as reviews
+        prompt them to add text reviews to the photos
+        if any tagged photos are missing location information, prompt them to add it, possibly from google places data
+
+
+    all users
+        have map ready to filter displayed reviews by author
+        have map ready to add a new review from the map button
+            when adding a new review, is it possible to use the instagram api to add a new photo???
+        have app ready to change the location of the map
+*/
+
+
             $("document").ready(function(){
                 //var endpoint = "https://api.instagram.com/v1/tags/thatsmyjam/media/recent?";
                 var endpoint = "https://api.instagram.com/v1/users/self/media/recent?";
@@ -63,14 +89,16 @@
                 $.get("https://ipinfo.io", function(response) {
                     var location = response.loc;
                     var geoLocation = location.split(",");
-                    getImages(authToken[1], geoLocation[0], geoLocation[1]);
+                    getOwnImages(authToken[1]);
                 }, "jsonp");
             }
-            function getImages(token, latitude, longitude){
+            
+            function getFriendsImages(token, latitude, longitude){
+            }
 
+            function getOwnImages(token){
                 //get images
                 $.ajax({
-                    //url: endpoint + "lat=" + latitude + "&lng=" + longitude + "?access_token=" + token,
                     url: endpoint + "access_token=" + token,
                     method: 'GET',
                     dataType: "jsonp"
@@ -78,31 +106,12 @@
                 .done(function(response) {
                     console.log(response.data);
                     if(response.meta.code === 200){
-                        // create current round of images
                         for (var i = 0; i < response.data.length; i++) {  
                             if (response.data[i].type === "image"){
                                 //look for the thatsmyjam hashtag
                                 if (hasHashTag(response.data[i].tags)){
-                                    var thumbnail = $("<img>");
-                                    thumbnail
-                                        .attr("src", response.data[i].images.thumbnail.url)
-                                        .addClass("thumbnail");
-                                    $("#response").append(thumbnail);
-                                    // get location information
-                                    if(response.data[i].location){
-                                        if(response.data[i].location.name){
-                                            $("#response").append("<div class='restaurant-name'>" + "restaurant name: " + response.data[i].location.name);
-                                        }
-                                        if(response.data[i].location.latitude){
-                                            $("#response").append("<div class='restaurant-coords'>" + "latitude: " + response.data[i].location.latitude);
-                                        }
-                                        if(response.data[i].location.longitude){
-                                            $("#response").append("<div class='restaurant-coords'>" + "longitude: " + response.data[i].location.longitude);
-                                        }
-                                    }
-                                }
-                                else {
-                                    console.log(response.data[i].images.thumbnail.url + "doesn't have the hashtag, sorry");
+                                    // create current round of images
+                                    createNewReview(response.data[i]);
                                 }
                             }
                         }
@@ -112,7 +121,7 @@
                 }).fail(function(err){
                     console.error("Failed: " + err);
                 });
-            }//function getImages
+            }//function getOwnImages
 
             function hasHashTag(imageTags){
                 var foundHashTag = false;
@@ -125,7 +134,36 @@
                 return foundHashTag;
             }//function hasHashTag
 
-            });
+            function createNewReview(imageData){
+                var thumbnail = $("<img>");
+                thumbnail
+                    .attr("src", imageData.images.thumbnail.url)
+                    .addClass("thumbnail");
+                $("#response").append(thumbnail);
+                // get location information
+                if(imageData.location){
+                    if(imageData.location.name){
+                        $("#response").append("<div class='restaurant-name'>" + "restaurant name: " + imageData.location.name);
+                    }
+                    if(imageData.location.latitude){
+                        $("#response").append("<div class='restaurant-coords'>" + "latitude: " + imageData.location.latitude);
+                    }
+                    if(imageData.location.longitude){
+                        $("#response").append("<div class='restaurant-coords'>" + "longitude: " + imageData.location.longitude);
+                    }
+                } else {
+                    //promptForLocation(imageData);
+                }
+
+            }//function createNewReview
+
+            function promptForLocation(imageData){
+                // this is in the icebox, but it would be nice to add down the road.
+                // probably should pass in a way to ref. this review in the database
+                // once that exists
+            }
+
+            });//document ready
         </script>
 </body>
 </html>
